Bug 582077 - Lock var_in_out property sheet for function FB types
Change-Id: Ic7e30df6c9b0531a56d465a78c84a9dd3f2de6f0
Signed-off-by: Martin Jobst <martin.jobst@posteo.de>